myPlants/force-app/main/default/objects/Paciente__c/Paciente__c.object-meta.xml
<CustomObject>
    <label>Paciente</label>
    <nameField>
        <label>Nombre del paciente</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pacientes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>