myPlants/force-app/main/default/objects/Paciente__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <label>Fecha</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>