myPlants/force-app/main/default/objects/Paciente__c/fields/H_bitos__c.field-meta.xml
<CustomField>
    <fullName>H_bitos__c</fullName>
    <label>Hábitos</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hace ejercicio</fullName>
            </value>
            <value>
                <fullName>Come en sus horas</fullName>
            </value>
            <value>
                <fullName>Fuma</fullName>
            </value>
            <value>
                <fullName>Toma alcohol</fullName>
            </value>
            <value>
                <fullName>Duerme bien</fullName>
            </value>
            <value>
                <fullName>Toma agua</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>