myPlants/force-app/main/default/objects/Paciente__c/fields/Observaciones__c.field-meta.xml
<CustomField>
    <fullName>Observaciones__c</fullName>
    <description>Ingresa las observaciones de tu paciente</description>
    <label>Observaciones</label>
    <type>TextArea</type>
</CustomField>