myPlants/force-app/main/default/objects/Paciente__c/fields/Telefono_Celular__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Celular__c</fullName>
    <label>Telefono Celular</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>